--- a/html-css/modul-3/style.css
+++ b/html-css/modul-3/style.css
@@ -7,6 +7,9 @@
   }
   .list{
     text-transform: uppercase;
+    margin: 0;
+    margin-top: 75px;
+    margin-bottom: 100px;
   }
   .list_nav {
     list-style-type: none;
@@ -44,6 +47,9 @@
     color: rgb(180, 173, 158);
     text-transform: uppercase;
     font-size: 14px;
+    margin: 0;
+    margin-top: 30px;
+    margin-bottom: 35px;
   }
   .image
   {
@@ -54,19 +60,24 @@
     margin: 0;
     font-size: 14px;
     line-height: 24px;
+    margin-bottom: 142px;
   }
   .head{
-    text-transform: uppercase;
+    
     color: rgb(98, 98, 98);
-    font-size: 30px;
+    font-size: 29px;
+   
     margin: 0;
+    margin-bottom: 42px;
   }
   .button{    
-    font-size: 24px;
-    line-height: 24px;
     margin: 0;
   }
   #b{
     font-family: 'Playfair Display', serif;
+    margin: 0;
+    width: 163px;
+    height: 60px;
+    font-size: 24px;
+    line-height: 24px;
   }
-  
