--- a/html-css/modul-3/style.css
+++ b/html-css/modul-3/style.css
@@ -1,83 +1,91 @@
 .container {
-  font-family: 'Playfair Display', serif;
-    width: 900px;
-    margin:0 auto;
-    padding: 0;
-    text-align: center;
-  }
-  .list{
-    text-transform: uppercase;
-    margin: 0;
-    margin-top: 75px;
-    margin-bottom: 100px;
-  }
-  .list_nav {
-    list-style-type: none;
-    font-size: 0;
-    margin: 0;
-  }
-  .nav {
-    display: inline-block;
-  }
-  .a_li{
-    text-decoration: none;
-    color: rgb(98, 98, 98);
-    padding: 50px;
-    font-size: 14px;
-    line-height: 24px;
-  }
-  a:hover {
-      color: rgb(75, 166, 223);
-  }
-  .main_b{
-    font-size: 0;
-    margin: 0 auto;
-  }
-  .block {
-      display: inline-block;
-      box-sizing: border-box;
-      text-align: left; 
-      font-size: 0;
-      margin: 0 auto;
-      width: 450px;
-      padding: 25px;
-  }
-  .titl{
-    font-family: 'Ubuntu', sans-serif;
-    color: rgb(180, 173, 158);
-    text-transform: uppercase;
-    font-size: 14px;
-    margin: 0;
-    margin-top: 30px;
-    margin-bottom: 35px;
-  }
-  .image
-  {
-    margin: 0;
-    font-size: 0;
-  }
-  .text{
-    margin: 0;
-    font-size: 14px;
-    line-height: 24px;
-    margin-bottom: 142px;
-  }
-  .head{
-    
-    color: rgb(98, 98, 98);
-    font-size: 29px;
-   
-    margin: 0;
-    margin-bottom: 42px;
-  }
-  .button{    
-    margin: 0;
-  }
-  #b{
-    font-family: 'Playfair Display', serif;
-    margin: 0;
-    width: 163px;
-    height: 60px;
-    font-size: 24px;
-    line-height: 24px;
-  }
+  font-family: "Playfair Display", serif;
+  width: 900px;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+}
+.list {
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 100px;
+}
+.list_nav {
+  list-style-type: none;
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+}
+.nav {
+  display: inline-block;
+  padding: 0;
+}
+.a_li {
+  display: block;
+  text-decoration: none;
+  color: rgb(98, 98, 98);
+  padding: 50px;
+  font-size: 14px;
+  line-height: 24px;
+}
+a:hover {
+  color: rgb(75, 166, 223);
+}
+.main_b {
+  font-size: 0;
+  margin: 0 auto;
+  padding: 0;
+}
+.block {
+  display: inline-block;
+  box-sizing: border-box;
+  text-align: left;
+  font-size: 0;
+  margin: 0 auto;
+  width: 450px;
+  padding: 25px;
+  margin-bottom: 142px;
+}
+.titl {
+  font-family: "Ubuntu", sans-serif;
+  color: rgb(180, 173, 158);
+  text-transform: uppercase;
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+  margin-top: 30px;
+  margin-bottom: 35px;
+}
+.image {
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+}
+.text {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  line-height: 24px;
+ 
+}
+.head {
+  color: rgb(98, 98, 98);
+  font-size: 29px;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 42px;
+}
+.button {
+  margin: 0;
+  padding: 0;
+}
+#b {
+  font-family: "Playfair Display", serif;
+  margin: 0;
+  padding: 0;
+  width: 163px;
+  height: 60px;
+  font-size: 24px;
+  line-height: 24px;
+}
