--- a/html-css/modul-03/style.css
+++ b/html-css/modul-03/style.css
@@ -9,7 +9,7 @@
   text-transform: uppercase;
   margin: 0;
   padding: 0;
-  margin-bottom: 100px;
+ 
 }
 .list_nav {
   list-style-type: none;
@@ -36,6 +36,7 @@ a:hover {
   font-size: 0;
   margin: 0 auto;
   padding: 0;
+  padding-bottom: 70px;
 }
 .block {
   display: inline-block;
@@ -59,13 +60,13 @@ a:hover {
   font-size: 14px;
   margin: 0;
   padding: 0;
-  margin-top: 30px;
   margin-bottom: 35px;
 }
 .image {
   margin: 0;
   padding: 0;
   font-size: 0;
+  margin-bottom: 30px;
 }
 .text {
   margin: 0;
@@ -82,7 +83,7 @@ a:hover {
   margin-bottom: 42px;
 }
 
-#b {
+.button {
   font-family: "Playfair Display", serif;
   margin: 0;
   padding: 0;
@@ -90,5 +91,8 @@ a:hover {
   height: 60px;
   font-size: 24px;
   line-height: 24px;
-  margin-bottom: 70px;
+ 
+}
+button:hover{
+  color: rgb(75, 166, 223);
 }
