--- a/html-css/modul-04/style.css
+++ b/html-css/modul-04/style.css
@@ -14,59 +14,70 @@ html {
   text-align: center;
 }
 
+
 .main-header {
   padding-bottom: 315px;
+  margin-top: 35px;
 }
 
 .main-header {
   /* padding: 38px, 0; */
 }
+
+.site-logo {
+  float: left;
+  margin: 0px;
+  padding: 0px;
+}
+
 .logo {
   text-transform: uppercase;
-  vertical-align: middle;
   font-family: "Roboto", sans-serif;
   color: rgb(81, 81, 81);
   text-decoration: none;
-  float: left;
   margin: 0px;
   padding: 0px;
   font-size: 30px;
   line-height: 32px;
 }
 
-.logo::first-letter {
+.site-logo::first-letter {
   color: rgb(26, 188, 156);
 }
-.manu {
-  display: inline-block;
+.menu {
+  /* display: inline-block; */
   text-transform: uppercase;
   vertical-align: middle;
   text-align: right;
-  width: 1024px;
+  min-width: 464px;
   margin: 0px;
   padding: 0px;
+  float: right;
+  list-style-type: none;
 }
 
-.manu::shadow {
+.menu::shadow {
   color: rgb(26, 188, 156);
 }
 
-.manu li {
-  display: inline-block;
+.menu li {
+  /* display: inline-block; */
+  float: left;
   margin-right: 36px;
 }
 
-.manu li:last-child {
+.menu li:last-child {
   margin-right: 0px;
 }
 
-.manu a:hover,
-.manu a:focus {
+.menu a:hover,
+.menu a:focus {
   color: rgb(26, 188, 156);
 }
 
-.manu-link {
-  font-family: "OpenSans";
+.menu-link {
+  display: block;
+  font-family: "Open Sans";
   color: rgb(81, 81, 81);
   text-decoration: none;
   float: right;
@@ -94,7 +105,10 @@ html {
 .title-prod::after,
 .yiyle-news::after {
   content: "";
-  position: absolute;
+  display: block;
+  margin: 0 auto;
+  margin-top: 33px;
+  /* position: absolute; */
   background-color: rgb(26, 188, 156);
   top: 67px;
   right: calc(50% - 80px);
@@ -193,7 +207,7 @@ img {
 }
 
 .title-news {
-  font-family: "OpenSans";
+  font-family: "Open Sans";
   color: rgb(85, 82, 82);
   font-weight: bold;
   position: relative;
@@ -207,7 +221,9 @@ img {
 
 .title-news::after {
   content: "";
-  position: absolute;
+  display: block;
+  margin: 0 auto;
+  /* position: absolute; */
   background-color: rgb(26, 188, 156);
   height: 3px;
   width: 136px;
@@ -216,7 +232,7 @@ img {
 }
 
 .content-news {
-  font-family: "OpenSans";
+  font-family: "Open Sans";
   color: rgb(85, 82, 82);
   font-size: 14px;
   line-height: 26px;
@@ -226,11 +242,12 @@ img {
 }
 
 .but {
-  text-align: left;
+  float: left;
+  /* text-align: left; */
 }
 
 .news-button {
-  font-family: "OpenSans";
+  font-family: "Open Sans";
   background-color: rgb(78, 198, 171);
   color: rgb(255, 255, 255);
   font-size: 16px;
