--- a/html-css/modul-04/style.css
+++ b/html-css/modul-04/style.css
@@ -76,7 +76,7 @@ html {
 }
 
 .menu-link {
-  display: block;
+  /* display: block; */
   font-family: "Open Sans";
   color: rgb(81, 81, 81);
   text-decoration: none;
@@ -124,10 +124,11 @@ html {
 }
 
 .prod-list-item {
-  display: inline-block;
+  /* display: inline-block; */
   width: 255px;
   margin-right: 30px;
   margin-bottom: 30px;
+  float: left;
 }
 
 .prod-list-item:nth-child(4n) {
@@ -135,7 +136,8 @@ html {
 }
 
 .prod-list-item:nth-last-child(-n + 4) {
-  margin-bottom: 0;
+  margin-bottom: 0px;
+
 }
 
 img {
@@ -145,10 +147,10 @@ img {
 }
 
 .prod-name {
-  display: inline-block;
+  /* display: inline-block; */
   text-transform: uppercase;
   background-color: rgb(50, 50, 50);
-
+float: left;
   font-family: "Roboto";
   color: rgb(255, 255, 255);
   font-size: 18px;
@@ -159,7 +161,7 @@ img {
 }
 
 .prod-many {
-  display: inline-block;
+  /* display: inline-block; */
   font-family: "Roboto";
   background: #8c8c8c;
   width: 55px;
@@ -169,6 +171,7 @@ img {
   font-size: 18px;
   line-height: 32px;
   margin: 0;
+  float: right;
 }
 
 .prod-list-item:hover .prod-name {
@@ -193,9 +196,10 @@ img {
 }
 
 .news-list-item {
-  display: inline-block;
+  /* display: inline-block; */
   width: 350px;
   margin-right: 30px;
+  float: left;
 }
 
 .news-list-item:nth-child(3n) {
@@ -246,10 +250,6 @@ img {
 
 .but {
   float: left;
-  /* text-align: left; */
-}
-
-.news-button {
   font-family: "Open Sans";
   background-color: rgb(78, 198, 171);
   color: rgb(255, 255, 255);
@@ -257,4 +257,11 @@ img {
   line-height: 26px;
   margin: 0;
   padding: 17px 43px;
+  text-decoration: none;
 }
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+  }
