--- a/html-css/modul-06/css/style.css
+++ b/html-css/modul-06/css/style.css
@@ -315,10 +315,10 @@ list-style: none;
 /* FOOTER */
 
 .foot-content {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: space-between;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* align-items: flex-end; */
+    /* justify-content: space-between; */
     height: 63px;
 }
 
@@ -370,8 +370,6 @@ input::placeholder {
     height: 42px;
     width: 150px;
     background-color: rgb(149, 225, 211);
-    margin: 0;
-    padding: 0;
     font-family: var(--Mons);
     color: rgb(255, 255, 255);
     text-transform: uppercase;
