--- a/html-css/modul-06/css/style.css
+++ b/html-css/modul-06/css/style.css
@@ -315,39 +315,48 @@ list-style: none;
 /* FOOTER */
 
 .foot-content {
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* align-items: flex-end; */
-    /* justify-content: space-between; */
-    height: 63px;
+    /* height: 63px; */
+    margin: 0;
+    
 }
 
-.foot-data::before {
+.foot-content::before {
 content: '';
 display: block;
+position: absolute;
 width: 1200px;
 height: 1px;
 background-color: rgb(229, 229, 229);
-margin-bottom: 25px;
+margin-bottom: 12px;
 }
 
+.foot-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 63px;
+}
 
 .foot-data {
-    /* display: flex; */
-    /* flex-direction: row; */
     font-family: var(--Mons);
     color: rgb(51, 51, 51);
     font-size: 14px;
-/* text-align: left; */
+    margin: 0;
 }
 
 .lo {
     text-decoration: none;
-    color: rgb(51, 51, 51);
+    color: var(--colB);
 }
 
 .lo:hover {
     color: var(--colR);
+}
+
+.foot-text {
+    font-size: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .form {
