--- a/html-css/modul-06/css/style.css
+++ b/html-css/modul-06/css/style.css
@@ -8,6 +8,7 @@ html {
   box-sizing: initial;
   margin: 0 auto;
   padding: 0px;
+  box-sizing: border-box;
 }
 
 
@@ -99,7 +100,6 @@ img {
 
 /* MAIN */
 .content-main {
-  margin: 0 auto;
   padding-top: 90px;
   padding-bottom: 100px;
 }
@@ -217,6 +217,7 @@ list-style: none;
   font-size: 15px;
   line-height: 24px;
   padding-bottom: 85px;
+  text-align: center;
 }
 
 .table {
