--- a/html-css/modul-07/css/style.css
+++ b/html-css/modul-07/css/style.css
@@ -249,20 +249,25 @@ padding: 0;
 
 .input {
   text-transform: uppercase;
+  font-size: 14px;
+  color: rgb(187, 187, 187);
   margin: 0;
   border: none;
-    height: 53px;
+ height: 53px;
   width: 455px;
 }
 
 .sidebar {
-  display: block;
+  /* display: block; */
   margin: 0;
   padding: 0;
 }
 
 .input-text {
+  resize: none;
   text-transform: uppercase;
+  font-size: 14px;
+  color: rgb(187, 187, 187);
   height: 212px;
   width: 455px;
 }
