--- a/html-css/modul-06/css/style.css
+++ b/html-css/modul-06/css/style.css
@@ -306,6 +306,8 @@ list-style: none;
     text-transform: uppercase;
     font-size: 14px;
     margin-top: 32px;
+    text-align: center;
+  
 }
 
 .profes {
@@ -315,6 +317,7 @@ list-style: none;
     font-style: oblique;
     font-size: 15px;
     line-height: 24px;
+    text-align: center;
 }
 
 /* FOOTER */
