--- a/html-css/modul-06/css/style.css
+++ b/html-css/modul-06/css/style.css
@@ -36,7 +36,7 @@ img {
 .menu {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: flex-end;
   list-style: none;
   height: 66px;
@@ -51,7 +51,6 @@ img {
   font-weight: bold;
   font-size: 30px;
   margin: 0;
-  padding-right: 605px;
   padding-bottom: 16px;
 }
 
@@ -156,6 +155,7 @@ img {
   text-transform: uppercase;
   color: rgb(51, 51, 51);
   font-size: 14px;
+  margin-bottom: 15px;
 }
 
 .text {
@@ -221,7 +221,7 @@ list-style: none;
 }
 
 .table {
-    width: 382px;
+    width: 380px;
 }
 
 .warp {
@@ -307,6 +307,7 @@ list-style: none;
     font-size: 14px;
     margin-top: 32px;
     text-align: center;
+    margin-bottom: 10px;
   
 }
 
