--- a/html-css/modul-08/css/style.css
+++ b/html-css/modul-08/css/style.css
@@ -1,66 +1,66 @@
 html {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-    margin: 0 auto;
-    padding: 0px;
- 
-  }
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0 auto;
+  padding: 0px;
+}
 
-    
-  img {
-    display: block;
-    max-width: 100%;
-    height: 100%;
-  }
+img {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+}
 
-  button:focus {
-    outline: none !important
-    }
+button:focus {
+  outline: none !important;
+}
 
-  :root {
-    --colW: rgb(255, 255, 255);
-  }
+:root {
+  --colW: rgb(255, 255, 255);
+}
 
 /* montserrat-800 - latin */
 @font-face {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 800;
-  src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'),
-       url('../font/montserrat-v14-latin-800.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../font/montserrat-v14-latin-800.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: local("Montserrat ExtraBold"), local("Montserrat-ExtraBold"),
+    url("../font/montserrat-v14-latin-800.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../font/montserrat-v14-latin-800.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* roboto-regular - latin */
 @font-face {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'),
-       url('../font/roboto-v20-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../font/roboto-v20-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: local("Roboto"), local("Roboto-Regular"),
+    url("../font/roboto-v20-latin-regular.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../font/roboto-v20-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 .content {
-  /* position: relative; */
-    max-width: 320px;
-    margin: 0 auto;
-    padding: 0;
-    text-align: center;
+  width: 320px;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
 }
 
 .baner {
-  /* position: absolute; */
-    width: 100%;
-    min-height: 540px;
-    background-image: url(../img/VectorSmartObject.png);
-    background-repeat: no-repeat;
-    margin-bottom: 70px;
+  width: 100%;
+  min-height: 540px;
+  background-color: black;
+  background-image: url(../img/VectorSmartObject.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 70px;
 }
 
 .header-nav {
@@ -68,13 +68,12 @@ html {
 }
 
 .heaher-nav-name {
-  display: flex;
-  justify-content: space-around;
   margin-bottom: 115px;
   padding-top: 20px;
 }
 
 .header-nav-item {
+  display: inline-block;
   height: 37px;
   width: 92px;
   text-align: center;
@@ -92,7 +91,7 @@ html {
 
 .header-nav-link {
   font-size: 14px;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-weight: bold;
   color: var(--colW);
   text-decoration: none;
@@ -102,14 +101,20 @@ html {
 
 .header-text {
   color: var(--colW);
-  margin-bottom: 18px;
+  /* margin: 0; */
   padding: 0;
-  
 }
 
 .header-title {
+  text-decoration: none;
   font-size: 20px;
   font-family: "Montserrat";
+  color: var(--colW);
+  margin: 0;
+  padding: 0;
+}
+
+.logo {
   margin-bottom: 30px;
 }
 
@@ -121,25 +126,25 @@ html {
 }
 
 .title-text-text {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 18px;
   width: 220px;
+  margin-bottom: 40px;
 }
 
 .header-button {
-  height: 40px;
-  width: 280px;
   background-color: rgb(255, 78, 80);
   border: 2px solid rgb(255, 78, 80);
   border-radius: 50px;
   color: var(--colW);
-}
-
-.link {
   color: var(--colW);
   font-size: 14px;
   font-family: "Montserrat";
   text-decoration: none;
+  padding-left: 52px;
+  padding-right: 52px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .title-main {
@@ -150,27 +155,23 @@ html {
   margin-bottom: 20px;
 }
 
-
-
 .divide {
-  width: 219px;
+  width: 200px;
   margin-bottom: 30px;
 }
 
-
-
 .picture::before {
-content: "";
-display: block;
-position: absolute;
-border-radius: 100%;
-border: 6px solid var(--colW);
-width: 45px;
-height: 45px;
-right: 20%;
-bottom: -7px;
-background-position: center center;
-background-repeat: no-repeat;
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100%;
+  border: 6px solid var(--colW);
+  width: 45px;
+  height: 45px;
+  right: 20%;
+  bottom: -7px;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .picture.icon-shape_1 {
@@ -195,7 +196,6 @@ background-repeat: no-repeat;
   position: relative;
 }
 
-
 .icon-shape_3::before {
   background-color: rgb(28, 215, 173);
   background-image: url(../img/Shape153.png);
@@ -211,10 +211,8 @@ background-repeat: no-repeat;
 }
 
 .pict {
-  /* position: relative; */
   border-radius: 100%;
   margin-bottom: 20px;
- 
 }
 
 .title-pict {
@@ -228,8 +226,6 @@ background-repeat: no-repeat;
   font-size: 14px;
   font-family: "Roboto";
   color: rgb(102, 102, 102);
-
-
 }
 
 .button-and {
@@ -241,4 +237,106 @@ background-repeat: no-repeat;
   font-size: 14px;
   font-family: "Montserrat";
   color: rgb(255, 78, 80);
+  background-color: white;
+}
+
+@media (min-width: 748px) {
+  .content {
+    min-width: 660px;
+  }
+
+  .baner {
+    min-height: 700px;
+    background-image: url(../img/VectorSmartObject2.png);
+  }
+
+  .header-nav {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-bottom: 140px;
+  }
+
+  .heaher-nav-name {
+    margin: 0;
+    margin-top: 40px;
+    padding: 0;
+  }
+
+  .logo {
+    padding: 0;
+    margin: 0;
+    margin-top: 50px;
+  }
+
+  .header-text {
+    width: 508px;
+  }
+
+  .title-text {
+    font-size: 52px;
+    margin-bottom: 25px;
+  }
+
+  .title-text-text {
+    font-size: 24px;
+    width: 508px;
+    margin-bottom: 55px;
+  }
+
+  .header-button {
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .title-main {
+    margin-bottom: 35px;
+  }
+
+  .divide {
+    width: 292px;
+    margin-top: 30px;
+  }
+
+  .flex {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+  }
+
+  .divide:nth-of-type(2) {
+    order: 3;
+  }
+
+  .divide:nth-of-type(3) {
+    order: 2;
+  }
+
+  .divide:nth-of-type(4) {
+    order: 4;
+  }
+
+  .button-and {
+    margin-top: 10px;
+    width: 192px;
+    margin-bottom: 40px;
+  }
+}
+
+@media (min-width: 942px) {
+  .content {
+    min-width: 942px;
+  }
+
+  .baner {
+    background-image: url(../img/VectorSmartObject3.png);
+  }
+
+  .flex {
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 0;
+  }
 }
