--- a/html-css/modul-09/css/style.css
+++ b/html-css/modul-09/css/style.css
@@ -121,13 +121,14 @@ button:focus {
 }
 
 /* MAIN */
+
+
 .main-title {
   font-size: 22px;
   font-family: "Montserrat";
   color: rgb(51, 51, 51);
   padding-top: 70px;
-  /* padding-bottom: 20px; */
-  margin: 0;
+  padding-bottom: 20px;
 }
 
 .column [class*="col-"] {
@@ -142,7 +143,7 @@ button:focus {
   border: 6px solid rgb(255, 255, 255);
   width: 45px;
   height: 45px;
-  right: 29%;
+  right: 19%;
   bottom: 13px;
   background-position: center center;
   background-repeat: no-repeat;
@@ -200,6 +201,8 @@ button:focus {
   font-size: 14px;
   font-family: "Roboto";
   color: rgb(102, 102, 102);
+  width: 200px;
+  text-align: center; /* почему не работает? как выстовить по середине при растягивании?*/
 }
 
 .null {
@@ -258,6 +261,11 @@ button:focus {
     padding-bottom: 10px;
   }
 
+  .main-title {
+    margin: 0;
+    padding-bottom: 0px;
+  }
+
   .column [class*="col-"] {
     margin-top: 30px;
   }
@@ -272,6 +280,10 @@ button:focus {
 
   .column-item:nth-of-type(4) {
     order: 4;
+  }
+
+  .column-subtitle {
+    width: 100%;
   }
 
   .button-and {
