--- a/html-css/modul-09/css/style.css
+++ b/html-css/modul-09/css/style.css
@@ -143,14 +143,10 @@ button:focus {
   border: 6px solid rgb(255, 255, 255);
   width: 45px;
   height: 45px;
-  right: 19%;
-  bottom: 13px;
+  right: 22%;
+  bottom: 46%;
   background-position: center center;
   background-repeat: no-repeat;
-}
-
-.column-image.icon-shape_1 {
-  position: relative;
 }
 
 .icon-shape_1::before {
@@ -158,26 +154,15 @@ button:focus {
   background-image: url(../img/Shape128.png);
 }
 
-.column-image.icon-shape_2 {
-  position: relative;
-}
 
 .icon-shape_2::before {
   background-color: rgb(255, 165, 7);
   background-image: url(../img/Shape155.png);
 }
 
-.column-image.icon-shape_3 {
-  position: relative;
-}
-
 .icon-shape_3::before {
   background-color: rgb(28, 215, 173);
   background-image: url(../img/Shape153.png);
-}
-
-.column-image.icon-shape_4 {
-  position: relative;
 }
 
 .icon-shape_4::before {
@@ -186,6 +171,7 @@ button:focus {
 }
 
 .column-pic {
+  position: relative;
   border-radius: 100%;
   margin-bottom: 20px;
 }
